[tool.poetry]
name = "timeguard_mqtt"
version = "0.0.1"
description = ""
authors = ["Andrey Yantsen <andrey@janzen.su>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.5.1"
construct = "^2.10.67"
construct-typing = "^0.5.1"
crcmod = "^1.7"
arrow = "^1.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[tool.poetry.scripts]
timeguard-mqtt = 'timeguard_mqtt.cli:run'

[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
