[tool.poetry]
name = "timeguard_mqtt"
version = "0.0.1"
description = ""
authors = ["Andrey Yantsen <andrey@janzen.su>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
construct = "^2.10.67"
construct-typing = "^0.5.5"
crcmod = "^1.7"
arrow = "^1.2.2"

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = [
    "timeguard_mqtt",
]
forced_separate = []
combine_as_imports = true

[tool.black]
target-version = ["py310"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.scripts]
timeguard-mqtt = 'timeguard_mqtt.cli:run'

[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
